objects/MISL_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to store the settings related to MISL Integarion.</description>
    <fields>
        <fullName>Enabled_Country_Codes__c</fullName>
        <label>Enabled Country Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <defaultValue>3000</defaultValue>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MISL Configuration</label>
</CustomObject>